js262/test/language/statements/class/elements/syntax/early-errors/grammar-static-gen-meth-prototype.js


/*---
description: Static Generator Methods cannot be named prototype (class declaration)
esid: prod-ClassElement
features: [generators, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Class Definitions / Static Semantics: Early Errors

    ClassElement : static MethodDefinition
        It is a Syntax Error if PropName of MethodDefinition is "prototype"

---*/


$DONOTEVALUATE();

class C {
  static * prototype() {}
}
